--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,7 @@
   height: 100%;
 }
 
+/* <a href="https://ibb.co/qRyj0R7"><img src="https://i.ibb.co/ZhLXHhG/BKash-logo.jpg" alt="BKash-logo" border="0"></a>
+<a href="https://ibb.co/f4tjrDW"><img src="https://i.ibb.co/hDH32YN/Nagad-Logo.png" alt="Nagad-Logo" border="0"></a>
+/* <a href="https://ibb.co/XZCvj0y"><img src="https://i.ibb.co/BVCScW4/Rocket-Customer.jpg" alt="Rocket-Customer" border="0"></a> */
+/* <a href="https://ibb.co/bzfD66h"><img src="https://i.ibb.co/nzWtww2/OIP.jpg" alt="OIP" border="0"></a> */
